[metadata]
name = nitorch-suite
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = NeuroImaging in PyTorch
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/nitorch/nitorch-suite

[options]
python_requires = >= 3.6
install_requires =
    torch >= 1.8
    jitfields @ git+https://github.com/balbasty/jitfields
    nitorch-cli @ git+https://github.com/nitorch/nitorch-cli
    nitorch-io @ git+https://github.com/nitorch/nitorch-io
    nitorch-core @ git+https://github.com/nitorch/nitorch-core
    nitorch-fastmath @ git+https://github.com/nitorch/nitorch-fastmath
    nitorch-interpol @ git+https://github.com/nitorch/nitorch-interpol
    nitorch-solvers @ git+https://github.com/nitorch/nitorch-solvers
    nitorch-register @ git+https://github.com/nitorch/nitorch-register
    nitorch-bayes @ git+https://github.com/nitorch/nitorch-bayes
    nitorch-plot @ git+https://github.com/nitorch/nitorch-plot
    nitorch-nn @ git+https://github.com/nitorch/nitorch-nn
    # nitorch-qmri @ git+https://github.com/nitorch/nitorch-qmri

cuda =
    jitfields[cuda] @ git+https://github.com/balbasty/jitfields
